Fixed the issue where we couldn't see label text because of their fill color on dark mode

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -42,9 +42,15 @@
         @include center-flex-column(5px);
 
         min-height: 400px;
+    }
 
-        & svg text {
-            fill: currentColor !important;
+    &__pie-chart {
+        &--light {
+            fill: black;
+        }
+
+        &--dark {
+            fill: white;
         }
     }
 }
